@@ -1,5 +1,11 @@
 2003-02-04  David Carlton  <carlton@math.stanford.edu>
 
+	* objfiles.c (allocate_objfile): Always set name.  Add comment at
+	start of function.
+	* jv-lang.c (get_dynamics_objfile): Add comment.
+
+2003-02-04  David Carlton  <carlton@math.stanford.edu>
+
 	* symtab.h (SYMBOL_LINKAGE_NAME): Delete.
 	* printcmd.c (build_address_symbolic): Replace uses of
 	SYMBOL_LINKAGE_NAME by equivalent uses of SYMBOL_SOURCE_NAME,
